--- a/configs/P520/i3blocks.conf
+++ b/configs/P520/i3blocks.conf
@@ -84,6 +84,8 @@ markup=none
 # #instance=eth0
 # interval=5
 
+
+
 # [battery]
 # command=i3-esta-periferals.py
 # color=#ffffff
@@ -149,6 +151,11 @@ interval=1
 # [temperature]
 # label=TEMP
 # interval=10
+
+[battery]
+command=/home/ab/bin/chip-temp.py
+color=#ffffff
+interval=10
 
 # Key indicators
 #
