added cpy,gpu chip temps

--- a/configs/P520/i3blocks.conf
+++ b/configs/P520/i3blocks.conf
@@ -153,7 +153,7 @@ interval=1
 # interval=10
 
 [battery]
-command=/home/ab/bin/chip-temp.py
+command=~/esta_base/configs/chip-temp.py
 color=#ffffff
 interval=10
 
