--- a/configs/Inspiron_16_5625/i3blocks.conf
+++ b/configs/Inspiron_16_5625/i3blocks.conf
@@ -153,8 +153,13 @@ interval=1
 # label=TEMP
 # interval=10
 
+# [battery]
+# command=~/Software/esta_base/configs/chip-temp.py
+# color=#ffffff
+# interval=10
+
 [battery]
-command=/home/ab/bin/chip-temp.py
+command=~/Software/esta_base/configs/battery-info.py
 color=#ffffff
 interval=10
 
