--- a/configs/Inspiron_16_5625/i3blocks.conf
+++ b/configs/Inspiron_16_5625/i3blocks.conf
@@ -153,10 +153,10 @@ interval=1
 # label=TEMP
 # interval=10
 
-# [battery]
-# command=~/Software/esta_base/configs/chip-temp.py
-# color=#ffffff
-# interval=10
+[battery]
+command=~/Software/esta_base/configs/chip-temp.py
+color=#ffffff
+interval=10
 
 [battery]
 command=~/Software/esta_base/configs/battery-info.py
