--- a/configs/Inspiron_16_5625/config
+++ b/configs/Inspiron_16_5625/config
@@ -6,12 +6,50 @@ set $alt mod1
 set $ctrl control
 set $shift Shift
 
+###########################################################################################################################
+#colors
+set $bg-color 	         #000000
+set $bg-border           #000000
+set $inactive-bg-color   #090909
+set $font System San Francisco Display 11
+set $text-color          #f3f4f5
+set $inactive-text-color #676E7D
+set $urgent-bg-color     #6a6a6a
+
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 # font pango:monospace 8
-font pango:System San Francisco Display 11
+# font pango:System San Francisco Display 13
+font pango:Source Code Pro 13
+# font $font
 
+# window colors
+#                       border              background         text                 indicator
+client.focused          $bg-color           $bg-color          $text-color          #00ff00
+client.unfocused        $bg-color           $inactive-bg-color $inactive-text-color #00ff00
+client.focused_inactive $bg-color           $inactive-bg-color $inactive-text-color #00ff00
+client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color          #00ff00
 
+# bindsym $mod+d exec dmenu_run -sf grey99 -sb grey1 -nf grey60 -nb grey4
+# bindsym $mod+d exec --no-startup-id i3-dmenu-desktop --dmenu="dmenu -nb '#XXXXXX' -sf  '#YYYYYY' -sb '#ZZZZZZ' -nf '#AAAAAA'"
+
+bindsym $mod+d exec dmenu_run -sf grey99 -sb grey1 -nf grey60 -nb grey4 -fn 'Source Code Pro-13'
+# bindsym $alt+c exec scrcpy
+
+bar {
+        tray_output primary
+        # position top
+        # status_command i3status
+        status_command "i3blocks -c ~/Software/esta_base/configs/Inspiron_16_5625/i3blocks.conf"
+        colors {
+		background $bg-color
+	    	separator #757575
+		#                  border             background         text
+		focused_workspace  $bg-color          $bg-color          $text-color
+		inactive_workspace $inactive-bg-color $inactive-bg-color $inactive-text-color
+		urgent_workspace   $urgent-bg-color   $urgent-bg-color   $text-color
+	}
+}
 ############################ exec ####################################
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
@@ -34,7 +72,7 @@ exec --no-startup-id nm-applet
 
 set $Locker i3lock --nofork -c 000000 && sleep 1
 
-set $mode_system System (l)ock, (e)xit , (s)uspend, (h)ibernate, (r)eboot, (p)oweroff
+set $mode_system System (l)ock, (e)xit , (s)uspend, (h)ibernate, (r)eboot, (p)oweroff, (d)ormant
 
 mode "$mode_system" {
     #exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
@@ -44,6 +82,7 @@ mode "$mode_system" {
     bindsym h exec --no-startup-id $Locker && systemctl hibernate, mode "default"
     bindsym r exec --no-startup-id systemctl reboot, mode "default"
     bindsym p exec --no-startup-id systemctl poweroff -i, mode "default"
+    bindsym d exec --no-startup-id systemctl suspend , mode "default"
 
     # back to normal: Enter or Escape
     bindsym Return mode "default"
@@ -113,7 +152,7 @@ bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 5%-
  set $workspace7  "7: main4"
  set $workspace8  "8: main3"
  set $workspace9  "9: main2"
- set $workspace0  "0: main1"
+ set $workspace0  "10: main1"
 
 # switch to workspace
  bindsym $alt+1 workspace $workspace1
@@ -175,7 +214,7 @@ exec $pavucontrol_app
 for_window [class=$Pavucontrol_app_class] move scratchpad
 bindsym $alt+s [class=$Pavucontrol_app_class] scratchpad show, resize set 1000px 700px, move position center
 
-exec thunar
+exec thunar --daemon
 exec code
 exec google-chrome-stable
 exec lxtask
@@ -198,43 +237,6 @@ assign [class="Lxtask"] $workspace4
 # assign [class="slimbookbatterypreferences.py"] $workspace4
 assign [class="steam"] $workspace5
 assign [class="discord"] $workspace6
-
-
-
-###########################################################################################################################
-#colors
-set $bg-color 	         #000000
-set $bg-border           #000000
-set $inactive-bg-color   #090909
-set $font System San Francisco Display
-set $text-color          #f3f4f5
-set $inactive-text-color #676E7D
-set $urgent-bg-color     #6a6a6a
-
-# window colors
-#                       border              background         text                 indicator
-client.focused          $bg-color           $bg-color          $text-color          #00ff00
-client.unfocused        $bg-color           $inactive-bg-color $inactive-text-color #00ff00
-client.focused_inactive $bg-color           $inactive-bg-color $inactive-text-color #00ff00
-client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color          #00ff00
-
-bindsym $mod+d exec dmenu_run -sf grey99 -sb grey1 -nf grey60 -nb grey4 -fn 'System San Francisco Display-12'
-# bindsym $alt+c exec scrcpy
-
-bar {
-        tray_output primary
-        # position top
-        # status_command i3status
-        status_command "i3blocks -c ~/Software/esta_base/configs/Inspiron_16_5625/i3blocks.conf"
-        colors {
-		background $bg-color
-	    	separator #757575
-		#                  border             background         text
-		focused_workspace  $bg-color          $bg-color          $text-color
-		inactive_workspace $inactive-bg-color $inactive-bg-color $inactive-text-color
-		urgent_workspace   $urgent-bg-color   $urgent-bg-color   $text-color
-	}
-}
 
 ###########################################################################################################################
 
