--- a/configs/P520_arch/i3blocks.conf
+++ b/configs/P520_arch/i3blocks.conf
@@ -158,10 +158,10 @@ command=~/Software/esta_base/configs/chip-temp.py
 color=#ffffff
 interval=10
 
-[battery]
-command=~/Software/esta_base/configs/battery-info.py
-color=#ffffff
-interval=10
+# [battery]
+# command=~/Software/esta_base/configs/battery-info.py
+# color=#ffffff
+# interval=10
 
 # Key indicators
 #
